Overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -543,6 +543,7 @@ button.bg-blue-500:focus {
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+  word-break: auto-phrase !important;
   display: grid;
   align-self: self-start;
   background: linear-gradient(to bottom, #353a3a, #485858f3);
@@ -551,8 +552,7 @@ button.bg-blue-500:focus {
   padding-left: 10px;
   padding-right: 10px;
   color: rgba(204, 204, 204, 0.889);
-  overflow-wrap: break-all;
-  word-break: break-all !important; /* Add this line for breaking long words */
+  overflow-wrap: anywhere !important;
 }
 
 .text-blue-500 {
@@ -665,14 +665,6 @@ pre {
   word-wrap: inherit !important;
   max-width: inherit !important;
 }
-.mb-8 {
-  background: linear-gradient(
-    45deg,
-    rgba(19, 18, 18, 0.9),
-    rgba(12, 12, 12, 0.342)
-  ) !important;
-  backdrop-filter: blur(5px);
-}
 
 .p {
   width: 50px !important;
@@ -688,10 +680,25 @@ pre {
   color: rgba(204, 204, 204, 0.889);
   max-width: inherit;
   overflow-wrap: break-all;
-  word-break: break-all !important; /* Add this line for breaking long words */
 }
 
 .p {
   word-wrap: inherit !important;
   max-width: inherit !important;
+}
+
+/* Your existing CSS code */
+body {
+  background: linear-gradient(
+    45deg,
+    hsl(240, 4%, 10%),
+    hsl(240, 4%, 11%),
+    hsl(240, 4%, 12%)
+  ) !important;
+  color: hsl(240, 3%, 63%);
+}
+
+/* Apply drop shadow inline to a specific element (e.g., a div with class 'content') */
+.content {
+  filter: drop-shadow(2px 4px 6px black);
 }
